snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.md5
dd5a990642f3a98b87e1fa603cec807f